--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,14 @@ dependencies:
   flutter_bloc: ^8.1.6
   equatable: ^2.0.5
   google_fonts: ^6.2.1
-
-dev_dependencies:
+  flutter_screenutil: ^5.9.3
   flutter_test:
     sdk: flutter
+  bloc: ^8.1.4
+  meta: ^1.15.0
+  logger: ^2.4.0
+
+dev_dependencies:
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
